src/test/deca/context/invalid/sansObj/print-boolean.deca
//Description:
//      print d'un booléen
//
// Résultat:
//Print ne prend en arguments que des int, float ou string
//
{
    boolean bool = true;
    print(bool);
}